CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MTCP)

ADD_DEFINITIONS("-std=c++11")

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

AUX_SOURCE_DIRECTORY(src SRC_MAIN)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/lib
)

LINK_LIBRARIES(
)

SET(SRC_LIST
    ${SRC_MAIN}
)

ADD_LIBRARY(mtcp SHARED ${SRC_LIST})
ADD_LIBRARY(mtcp_static STATIC ${SRC_LIST})

SET_TARGET_PROPERTIES(mtcp PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(mtcp_static PROPERTIES OUTPUT_NAME "mtcp")
SET_TARGET_PROPERTIES(mtcp_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
